Fix: reduce extra margin on contact-form on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ main {
     align-items: center;
     justify-content: center;
     min-height: 100%;
-    margin: 5rem .5rem 7rem .5rem;
+    margin: 2rem .5rem 7rem .5rem;
     max-width: 100%;
 }
 
